# tempo30-img-convert

./: .env.example  .gitignore  BODY_INSTRUCTIONS_ANALYSIS.md  CURRENT_IMPLEMENTATION_FAQ.md  ILLUSTRATION_HANDLING_ANALYSIS.md  MODEL_COMPARISON_ANALYSIS.md  ORIGINAL_VS_CURRENT_COMPARISON.md  PIPELINE_ARCHITECTURE_GUIDE.md  PIPELINE_COMPLETE_GUIDE.md  PROMPT_ORDER_ANALYSIS.md  PROMPT_VERSION_COMPARISON.md  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_LESSONS_LEARNED.md  README.md  STYLE_DOCUMENTATION.md  TECHNICAL_NOTES.md  UV_USAGE.md  UX_IMPROVEMENT_PROGRESS.md  WORKFLOW_COMPLETE.md  app.py  app_Gradio.py  app_fine_grained.py  app_fixed.py  app_multistyle.py  app_old_backup_20251209.py  app_simple.py  app_test.py  cleanup_duplicates.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt  run.sh  test_ai_enhance.py  test_railway.py  upload_wp_media.py  verify_system.sh
backup_before_pipeline/: prompts_detailed_original.py  style_converter_original.py
src/: __init__.py  config.py  gemini_client.py  image_processor.py  prompts.py  prompts_simplified_backup.py  style_converter.py  utils.py
src/pipeline/: __init__.py  components.py  components_fine_grained.py  components_legacy_backup.py  engine.py  style_configs.py  style_configs_fine_grained.py  style_configs_legacy_backup.py
templates/: index.html
